librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_table_properties_collector_factory_create(
        state: *mut libc::c_void,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
        destruct: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        create_table_properties_collector: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                cf: u32,
            ) -> *mut crocksdb_table_properties_collector_t,
        >,
    ) -> *mut crocksdb_table_properties_collector_factory_t;
}
extern "C" {
    pub fn crocksdb_table_properties_collector_factory_destroy(
        arg1: *mut crocksdb_table_properties_collector_factory_t,
    );
}
extern "C" {
    pub fn crocksdb_options_add_table_properties_collector_factory(
        opt: *mut crocksdb_options_t,
        f: *mut crocksdb_table_properties_collector_factory_t,
    );
}
extern "C" {
    pub fn crocksdb_get_properties_of_all_tables(
        db: *mut crocksdb_t,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_table_properties_collection_t;
}
extern "C" {
    pub fn crocksdb_get_properties_of_all_tables_cf(
        db: *mut crocksdb_t,
        cf: *mut crocksdb_column_family_handle_t,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_table_properties_collection_t;
}
extern "C" {
    pub fn crocksdb_get_properties_of_tables_in_range(
        db: *mut crocksdb_t,
        cf: *mut crocksdb_column_family_handle_t,
        num_ranges: libc::c_int,
        start_keys: *const *const libc::c_char,
        start_keys_lens: *const usize,
        limit_keys: *const *const libc::c_char,
        limit_keys_lens: *const usize,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_table_properties_collection_t;
}
extern "C" {
    pub fn crocksdb_keyversions_destroy(kvs: *mut crocksdb_keyversions_t);
}
extern "C" {
    pub fn crocksdb_get_all_key_versions(
        db: *mut crocksdb_t,
        begin_key: *const libc::c_char,
        begin_keylen: usize,
        end_key: *const libc::c_char,
        end_keylen: usize,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_keyversions_t;
}
extern "C" {
    pub fn crocksdb_keyversions_count(kvs: *const crocksdb_keyversions_t) -> usize;
}
extern "C" {
    pub fn crocksdb_keyversions_key(
        kvs: *const crocksdb_keyversions_t,
        index: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_keyversions_value(
        kvs: *const crocksdb_keyversions_t,
        index: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_keyversions_seq(kvs: *const crocksdb_keyversions_t, index: libc::c_int) -> u64;
}
extern "C" {
    pub fn crocksdb_keyversions_type(
        kvs: *const crocksdb_keyversions_t,
        index: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_set_external_sst_file_global_seq_no(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        file: *const libc::c_char,
        seq_no: u64,
        errptr: *mut *mut libc::c_char,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_get_column_family_meta_data(
        db: *mut crocksdb_t,
        cf: *mut crocksdb_column_family_handle_t,
        arg1: *mut crocksdb_column_family_meta_data_t,
    );
}
extern "C" {
    pub fn crocksdb_column_family_meta_data_create() -> *mut crocksdb_column_family_meta_data_t;
}
extern "C" {
    pub fn crocksdb_column_family_meta_data_destroy(arg1: *mut crocksdb_column_family_meta_data_t);
}
extern "C" {
    pub fn crocksdb_column_family_meta_data_level_count(
        arg1: *const crocksdb_column_family_meta_data_t,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_column_family_meta_data_level_data(
        arg1: *const crocksdb_column_family_meta_data_t,
        n: usize,
    ) -> *const crocksdb_level_meta_data_t;
}
extern "C" {
    pub fn crocksdb_level_meta_data_file_count(arg1: *const crocksdb_level_meta_data_t) -> usize;
}
extern "C" {
    pub fn crocksdb_level_meta_data_file_data(
        arg1: *const crocksdb_level_meta_data_t,
        n: usize,
    ) -> *const crocksdb_sst_file_meta_data_t;
}
extern "C" {
    pub fn crocksdb_sst_file_meta_data_size(arg1: *const crocksdb_sst_file_meta_data_t) -> usize;
}
extern "C" {
    pub fn crocksdb_sst_file_meta_data_name(
        arg1: *const crocksdb_sst_file_meta_data_t,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_sst_file_meta_data_smallestkey(
        arg1: *const crocksdb_sst_file_meta_data_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_sst_file_meta_data_largestkey(
        arg1: *const crocksdb_sst_file_meta_data_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_compaction_options_create() -> *mut crocksdb_compaction_options_t;
}
extern "C" {
    pub fn crocksdb_compaction_options_destroy(arg1: *mut crocksdb_compaction_options_t);
}
extern "C" {
    pub fn crocksdb_compaction_options_set_compression(
        arg1: *mut crocksdb_compaction_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_compaction_options_set_output_file_size_limit(
        arg1: *mut crocksdb_compaction_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn crocksdb_compaction_options_set_max_subcompactions(
        arg1: *mut crocksdb_compaction_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_compact_files_cf(
        arg1: *mut crocksdb_t,
        arg2: *mut crocksdb_column_family_handle_t,
        arg3: *mut crocksdb_compaction_options_t,
        input_file_names: *mut *const libc::c_char,
        input_file_count: usize,
        output_level: libc::c_int,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_get_perf_level() -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_set_perf_level(level: libc::c_int);
}
extern "C" {
    pub fn crocksdb_get_perf_context() -> *mut crocksdb_perf_context_t;
}
extern "C" {
    pub fn crocksdb_perf_context_reset(arg1: *mut crocksdb_perf_context_t);
}
extern "C" {
    pub fn crocksdb_perf_context_user_key_comparison_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_cache_hit_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_read_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_read_byte(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_read_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_checksum_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_decompress_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_read_bytes(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_multiget_read_bytes(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_iter_read_bytes(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_internal_key_skipped_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_internal_delete_skipped_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_internal_recent_skipped_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_internal_merge_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_snapshot_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_from_memtable_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_from_memtable_count(arg1: *mut crocksdb_perf_context_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_post_process_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_get_from_output_files_time(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_on_memtable_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_on_memtable_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_next_on_memtable_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_prev_on_memtable_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_child_seek_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_child_seek_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_min_heap_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_max_heap_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_seek_internal_seek_time(arg1: *mut crocksdb_perf_context_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_find_next_user_entry_time(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_wal_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_memtable_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_delay_time(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_pre_and_post_process_time(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_db_mutex_lock_nanos(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_thread_wait_nanos(arg1: *mut crocksdb_perf_context_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_write_scheduling_flushes_compactions_time(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_db_condition_wait_nanos(arg1: *mut crocksdb_perf_context_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_merge_operator_time_nanos(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_read_index_block_nanos(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_read_filter_block_nanos(arg1: *mut crocksdb_perf_context_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_new_table_block_iter_nanos(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_new_table_iterator_nanos(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_block_seek_nanos(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_find_table_nanos(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_bloom_memtable_hit_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_bloom_memtable_miss_count(
        arg1: *mut crocksdb_perf_context_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_bloom_sst_hit_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
extern "C" {
    pub fn crocksdb_perf_context_bloom_sst_miss_count(arg1: *mut crocksdb_perf_context_t) -> u64;
}
